fix navMenu z-index

--- a/src/components/NavMenu/NavMenu.css
+++ b/src/components/NavMenu/NavMenu.css
@@ -6,7 +6,7 @@
     right: 0;
     display: flex;
     background: transparent;
-    z-index: 1;
+    z-index: 10;
     transition: 1s;
 }
 
